--- a/Zipssa/app/src/main/AndroidManifest.xml
+++ b/Zipssa/app/src/main/AndroidManifest.xml
@@ -14,10 +14,10 @@
 		<activity android:name="com.khnsoft.zipssa.MainActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
-
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
+		<activity android:name=".AddLabelPopup" android:theme="@style/PopupTheme" />
 	</application>
 
 </manifest>
