--- a/Zipssa/app/src/main/AndroidManifest.xml
+++ b/Zipssa/app/src/main/AndroidManifest.xml
@@ -10,15 +10,16 @@
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
-		<activity android:name=".AddAlarm"/>
-		<activity android:name=".EditAlarm"/>
-		<activity android:name=".MyAlertPopup" android:theme="@style/PopupTheme"/>
 		<activity android:name=".MainActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
+		<activity android:name=".AddAlarmActivity"/>
+		<activity android:name=".EditAlarmActivity"/>
+		<activity android:name=".MedicineDetailActivity"/>
+		<activity android:name=".MyAlertPopup" android:theme="@style/PopupTheme"/>
 		<activity android:name=".AddLabelPopup" android:theme="@style/PopupTheme" />
 		<activity android:name=".MainItemPopup" android:theme="@style/PopupTheme" />
 	</application>
