--- a/Zipssa/app/src/main/AndroidManifest.xml
+++ b/Zipssa/app/src/main/AndroidManifest.xml
@@ -3,25 +3,35 @@
 	package="com.khnsoft.zipssa">
 
 	<application
-		android:usesCleartextTraffic="true"
 		android:allowBackup="true"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
-		android:theme="@style/AppTheme">
+		android:theme="@style/AppTheme"
+		android:usesCleartextTraffic="true">
+		<activity android:name=".MypageMyprofileActivity"/>
 		<activity android:name=".MainActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
+
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		<activity android:name=".AddAlarmActivity"/>
-		<activity android:name=".EditAlarmActivity"/>
-		<activity android:name=".MedicineDetailActivity"/>
-		<activity android:name=".MyAlertPopup" android:theme="@style/PopupTheme"/>
-		<activity android:name=".AddLabelPopup" android:theme="@style/PopupTheme" />
-		<activity android:name=".MainItemPopup" android:theme="@style/PopupTheme" />
+		<activity android:name=".AddAlarmActivity" />
+		<activity android:name=".EditAlarmActivity" />
+		<activity android:name=".MedicineDetailActivity" />
+		<activity android:name=".MypageActivity" />
+		<activity
+			android:name=".MyAlertPopup"
+			android:theme="@style/PopupTheme" />
+		<activity
+			android:name=".AddLabelPopup"
+			android:theme="@style/PopupTheme" />
+		<activity
+			android:name=".MainItemPopup"
+			android:theme="@style/PopupTheme" />
+		<activity android:name=".MypageChangepwActivity" />
 	</application>
 
 </manifest>
