--- a/Zipssa/app/src/main/AndroidManifest.xml
+++ b/Zipssa/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
 		<activity android:name=".MypageHistoryPhotoActivity" />
 		<activity android:name=".MypageHistoryPhotoDetailActivity" />
 		<activity android:name=".MypageSettingActivity" />
+		<activity android:name=".MypageLeavingActivity" />
 	</application>
 
 </manifest>
