--- a/Zipssa/build.gradle
+++ b/Zipssa/build.gradle
@@ -23,6 +23,13 @@ allprojects {
     }
 }
 
+subprojects {
+    repositories {
+        mavenCentral()
+        maven { url 'https://devrepo.kakao.com/nexus/content/groups/public/' }
+    }
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
