--- a/Zipssa/app/build.gradle
+++ b/Zipssa/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation group: 'com.kakao.sdk', name: 'usermgmt', version: '1.27.0'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    implementation project(':CalendarViewLib')
 }
