--- a/Zipssa/app/src/main/AndroidManifest.xml
+++ b/Zipssa/app/src/main/AndroidManifest.xml
@@ -47,5 +47,6 @@
 			</intent-filter>
 		</activity>
 		<activity android:name=".ContractActivity" />
+		<activity android:name=".MainListCalendarActivity" />
 	</application>
 </manifest>
