--- a/Zipssa/app/src/main/AndroidManifest.xml
+++ b/Zipssa/app/src/main/AndroidManifest.xml
@@ -48,5 +48,6 @@
 		</activity>
 		<activity android:name=".ContractActivity" />
 		<activity android:name=".MainListCalendarActivity" />
+		<activity android:name=".MainListSyncActivity" />
 	</application>
 </manifest>
