Add loading page

--- a/Zipssa/app/src/main/AndroidManifest.xml
+++ b/Zipssa/app/src/main/AndroidManifest.xml
@@ -49,5 +49,6 @@
 		<activity android:name=".ContractActivity" />
 		<activity android:name=".MainListCalendarActivity" />
 		<activity android:name=".MainListSyncActivity" />
+		<activity android:name=".LoadingActivity" />
 	</application>
 </manifest>
