--- a/Zipssa/app/build.gradle
+++ b/Zipssa/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.3'
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation project(':CalendarViewLib')
+    implementation 'gun0912.ted:tedpermission:2.0.0'
 }
