--- a/medicine/src/main/resources/application.properties
+++ b/medicine/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 server.port=8081
+#spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
+#spring.datasource.username=nathan
+#spring.datasource.password=mysql
+lombok.anyConstructor.addConstructorProperties=true
+config.stopBubbling = true
