--- a/medicine/src/main/resources/application.yml
+++ b/medicine/src/main/resources/application.yml
@@ -1,14 +1,20 @@
-
 spring:
   datasource:
     url: jdbc:h2:tcp://localhost/~/home-doctor
     username: sa
     password:
     driver-class-name: org.h2.Driver
+# mysql
+#spring:
+#  datasource:
+#    url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/medicine?serverTimezone=UTC&characterEncoding=UTF-8
+#    username: nathan
+#    password: password
+#    driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
     hibernate:
-       ddl-auto: create
+       ddl-auto: update
     properties:
       hibernate:
         show_sql: true
@@ -19,3 +25,6 @@ spring:
 logging.level:
   org.hibernate.SQL: debug
 #  org.hibernate.type: trace
+
+
+
