--- a/medicine/build.gradle
+++ b/medicine/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
 	implementation 'com.auth0:java-jwt:3.8.2'
+	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+	compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
 	compile group: 'de.svenkubiak', name: 'jBCrypt', version: '0.4'
 	//Thanks for using https://jar-download.com
 
