Update API after 0318

--- a/Zipssa/app/src/main/AndroidManifest.xml
+++ b/Zipssa/app/src/main/AndroidManifest.xml
@@ -67,5 +67,13 @@
 		<activity
 			android:name=".MypageSyncCrewPopup"
 			android:theme="@style/PopupTheme" />
+		<activity android:name=".AuthWebActivity" />
+
+		<receiver android:name=".AlarmReceiver" >
+			<intent-filter>
+				<action android:name="android.intent.action.BOOT_COMPLETED" />
+			</intent-filter>
+		</receiver>
+		<service android:name=".AlarmService" />
 	</application>
 </manifest>
