--- a/medicine/build.gradle
+++ b/medicine/build.gradle
@@ -22,6 +22,14 @@ repositories {
 	mavenCentral()
 }
 
+
+bootJar {
+	archiveBaseName = 'homedoctor'
+	archiveFileName = 'medicine-hands.jar'
+	archiveVersion = '1.1.2'
+
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
@@ -31,6 +39,15 @@ dependencies {
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 	compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
 	compile group: 'de.svenkubiak', name: 'jBCrypt', version: '0.4'
+
+	// google cloud
+//	compile group: 'org.springframework.cloud', name: 'spring-cloud-gcp-starter-sql-mysql', version: '1.0.0.RELEASE'
+//	compile group: 'org.springframework.cloud', name: 'spring-cloud-gcp-starter', version: '1.0.0.RELEASE'
+//	compile group: 'com.google.cloud.tools', name: 'appengine-gradle-plugin', version: '1.3.2'
+//	compile group: 'com.google.cloud.sql', name: 'mysql-socket-factory', version: '1.0.14'
+//	compile 'com.google.cloud.sql:mysql-socket-factory-connector-j-8:1.0.15'
+
+
 	//Thanks for using https://jar-download.com
 
 	compileOnly 'org.projectlombok:lombok'
